# tool-side-effects-tag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_side_effects_tag/: __init__.py
tests/: test_tag.py
